--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="samsung.html">About Samsung</a>
                 <a class="dropdown-item" href="samsung_galaxy_s_series.html">Samsung Galaxy S series</a>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="samsung_galaxy_note_series.html">
                   Samsung Galaxy Note series
                 </a>
                 <a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
