--- a/samsung_galaxy_note_series.html
+++ b/samsung_galaxy_note_series.html
@@ -27,17 +27,17 @@ Samsung Galaxy S series Phones:
 
 
 <ol>
-<li><a href="samsung_galaxy_s.html">S1</a></li>
-<li><a href="samsung_galaxy_s_2.html">S2</a></li>
-<li><a href="samsung_galaxy_s_3.html">S3</a></li>
-<li><a href="samsung_galaxy_s_4.html">S4</a></li>
-<li><a href="samsung_galaxy_s_5.html">S5</a></li>
-<li><a href="samsung_galaxy_s_6.html">S6</a></li>	
-<li><a href="samsung_galaxy_s_7.html">S7</a></li>
-<li><a href="samsung_galaxy_s_8.html">S8</a></li>
-<li><a href="samsung_galaxy_s_9.html">S9</a></li>
-<li><a href="samsung_galaxy_s_10.html">S10</a></li>
-<li><a href="samsung_galaxy_s_20.html">S20</a></li>
+<li><a href="samsung_galaxy_note_1.html">Note</a></li>
+<li><a href="samsung_galaxy_note_2.html">Note 2</a></li>
+<li><a href="samsung_galaxy_note_3.html">Note 3</a></li>
+<li><a href="samsung_galaxy_note_4.html">Note 4</a></li>
+<li><a href="samsung_galaxy_note_5.html">Note 5</a></li>
+<li><a href="samsung_galaxy_note_6.html">Note 6</a></li>
+<li><a href="samsung_galaxy_note_7.html">Note 7</a></li>
+<li><a href="samsung_galaxy_note_8.html">Note 8</a></li>
+<li><a href="samsung_galaxy_note_9.html">Note 9</a></li>
+<li><a href="samsung_galaxy_note_10.html">Note 10</a></li>
+<li><a href="samsung_galaxy_note_20.html">Note 20</a></li>
 </ol>
 
 <br>
