--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#">Link</a>
             </li>-->
             <!--Dropdown-Samsung-->
-            <div class="container">  
+            <!--<div class="container">-->  
                         <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Samsung
@@ -138,7 +138,6 @@
       </div>
 
       </nav>
-
 
 
 
