--- a/samsung.html
+++ b/samsung.html
@@ -130,7 +130,7 @@
   
   </nav>
   
-<img src="pic/samsung-galaxy-note-new-logo.jpg" class="img-fluid"/>
+<img src="pic/samsung_logo.png" class="img-fluid"/>
 
 
 </head>
@@ -153,6 +153,138 @@ Samsung was founded by Lee Byung-chul in 1938 as a trading company. Over the nex
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<!--footer-->
+
+<footer class="ct-footer">
+	<div class="container">
+	  <form name="contentForm" enctype="multipart/form-data" method="post" action="">
+		<div class="ct-footer-pre text-center-lg">
+		  <div class="inner">
+			<span>Join Smart tech</span>
+		  </div>
+		  <div class="inner">
+			<div class="form-group">
+			  <input name="formfields[nl_email]" id="nl_email" class="validate[required]" placeholder="Enter your email address" type="text" value=""> <label for="nl_email" class="sr-only">Email Address</label>
+			</div>
+		  </div>
+		</div>
+	  </form>
+	  <ul class="ct-footer-list text-center-sm">
+		<li>
+		  <h2 class="ct-footer-list-header">Learn More</h2>
+		  <ul>
+			<li>
+			  <a href="">Company</a>
+			</li>
+			<li>
+			  <a href="">Clients</a>
+			</li>
+			<li>
+			  <a href="">News</a>
+			</li>
+			<li>
+			  <a href="">Careers</a>
+			</li>
+		  </ul>
+		</li>
+		<li>
+		  <h2 class="ct-footer-list-header">Services</h2>
+		  <ul>
+			<li>
+			  <a href="">Design</a>
+			</li>
+			<li>
+			  <a href="">Marketing</a>
+			</li>
+			<li>
+			  <a href="">Sales</a>
+			</li>
+			<li>
+			  <a href="">Programming</a>
+			</li>
+			<li>
+			  <a href="">Support</a>
+			</li>
+		  </ul>
+		</li>
+		<li>
+		  <h2 class="ct-footer-list-header">The Industry</h2>
+		  <ul>
+			<li>
+			  <a href="">Thought Leadership</a>
+			</li>
+			<li>
+			  <a href="">Webinars</a>
+			</li>
+			<li>
+			  <a href="">Events</a>
+			</li>
+			<li>
+			  <a href="">Sponsorships</a>
+			</li>
+			<li>
+			  <a href="">Advisors</a>
+			</li>
+			<li>
+			  <a href="">Training Program</a>
+			</li>
+			<li>
+			  <a href="">Activities & Campaigns</a>
+			</li>
+		  </ul>
+		</li>
+		<li>
+		  <h2 class="ct-footer-list-header">Public Relations</h2>
+		  <ul>
+			<li>
+			  <a href="">WebCorpCo Blog</a>
+			</li>
+			<li>
+			  <a href="">Hackathons</a>
+			</li>
+			<li>
+			  <a href="">Videos</a>
+			</li>
+			<li>
+			  <a href="">News Releases</a>
+			</li>
+			<li>
+			  <a href="">Newsletters</a>
+			</li>
+		  </ul>
+		</li>
+		<li>
+		  <h2 class="ct-footer-list-header">About</h2>
+		  <ul>
+			<li>
+			  <a href="">FAQ</a>
+			</li>
+			<li>
+			  <a href="">Our Board</a>
+			</li>
+			<li>
+			  <a href="">Our Staff</a>
+			</li>
+			<li>
+			  <a href="">Contact Us</a>
+			</li>
+		  </ul>
+		</li>
+	  </ul>
+	  <div class="ct-footer-meta text-center-sm">
+		<div class="row">
+		  <div class="col-sm-6 col-md-2">
+			<img alt="logo" src="https://via.placeholder.com/90x90.png">
+		  </div>
+		  <div class="col-sm-6 col-md-3">
+			<address>
+			  <span>WebCorpCo<br></span>123 Easy Street<br>
+			  Orlando, Florida, 32801<br>
+			  <span>Phone: <a href="tel:5555555555">(555) 555-8899</a></span>
+			</address>
+		 </div>
+  </footer>
 
 
 
