--- a/Apple.html
+++ b/Apple.html
@@ -1,17 +1,11 @@
 <html>
 	<head>
-		 <!-- Required meta tags -->
-		 <meta charset="utf-8">
-		 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	 
-		 <!-- Bootstrap CSS -->
-		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		 <!--index.css-->
-		 <link href="index.css" rel="stylesheet type=text/css"/>
-
-<style></style>
-<title>Samsung Galaxy S series</title>
-<!--smart tech icon -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<!--index.css-->
+		<link href="index.css" rel="stylesheet type=text/css"/>
+		
+		<title>Samsung</title>
+		<!--smart tech icon -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" href="index.html">Smart Tech</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +42,7 @@
 			  iphone
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			  <a class="dropdown-item" href="Apple.html">About Apple </a>
+			  <a class="dropdown-item" href="">About Apple </a>
 			  <a class="dropdown-item" href="iphone.html">iphone</a>
 			  <a class="dropdown-item" href="#">ipad</a>
 			</div>
@@ -133,43 +127,28 @@
 	  </form>
 	</div>
   </div>
-
+  
   </nav>
-  <center><img src="pic/samsung-galaxy-s-new-logo.png"/ height:20px;></center>
+  
+<img src="pic/apple.jpg" class="img-fluid"/>
+
 
 </head>
 <body>
-<p><section>
-
-
-
-The Samsung Galaxy S (Super Smart) series is a line of high-end Android-powered mobile devices produced by Samsung Electronics, a division of Samsung from South Korea. 
-The series consisted initially of smartphones and the first device, the Samsung Galaxy S, was announced in March 2010 and released for sale in June of that year. Since the introduction of the Samsung Galaxy Note in 2011, the Galaxy S line has co-existed with the Galaxy Note line as being Samsung's flagship smartphones. 
-
-</p></section>
-
-Samsung Galaxy S series Phones:
-
-
+    <p><section>Apple Inc. is an American multinational technology company headquartered in Cupertino, California, that designs, develops, and sells consumer electronics, computer software, and online services. It is considered one of the Big Four technology companies, alongside Amazon, Google, and Microsoft.</p></section>
+        
 <ol>
-
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>
-    <li><a href="samsung_galaxy_fold_2.html">Fold 2</a></li>
-    <!--<li><a href="samsung_galaxy_fold_1.html">Fold 3</a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold </a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>
-    <li><a href="samsung_galaxy_fold_1.html">Fold</a></li>-->
-
-
+<li><a href="iphone.html">iphone</a></li>
+<li><a href="ipad.html">ipad</li></a>
 </ol>
 
-<br>
 
-<a href="Samsung.html"><button>Go Back To Samsung  Page</button></a>
+<!-- Optional JavaScript -->
 
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 <!--footer-->
 
@@ -304,5 +283,14 @@ Samsung Galaxy S series Phones:
   </footer>
 
 
+
 </body>
 </html>
+
+
+
+
+
+
+
+
