--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#">Link</a>
             </li>-->
             <!--Dropdown-Samsung-->
-            <!--<div class="container">-->  
+            <div class="container"> 
                         <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Samsung
@@ -42,7 +42,7 @@
                 <a class="dropdown-item" href="samsung_galaxy_note_series.html">
                   Samsung Galaxy Note series
                 </a>
-                <a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
+                <a class="dropdown-item" href="samsung_galaxy_fold_series.html">Samsung Galaxy Fold series</a>
               </div>
             </li>
             <!--dropdown-2-->
@@ -51,7 +51,7 @@
                   iphone
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="">About Apple </a>
+                  <a class="dropdown-item" href="Apple.html">About Apple </a>
                   <a class="dropdown-item" href="iphone.html">iphone</a>
                   <a class="dropdown-item" href="#">ipad</a>
                 </div>
