--- a/iphone.html
+++ b/iphone.html
@@ -37,7 +37,7 @@
           <a class="dropdown-item" href="samsung_galaxy_note_series.html">
             Samsung Galaxy Note series
           </a>
-          <a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
+          <a class="dropdown-item" href="samsung_galaxy_fold_series.html">Samsung Galaxy Fold series</a>
         </div>
       </li>
       <!--dropdown-2-->
@@ -46,7 +46,7 @@
             iphone
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="">About Apple </a>
+            <a class="dropdown-item" href="Apple.html">About Apple </a>
             <a class="dropdown-item" href="iphone.html">iphone</a>
             <a class="dropdown-item" href="#">ipad</a>
           </div>
@@ -163,7 +163,9 @@ iphone series :
 <li><a href="iphone_7.html">iphone 7</a></li>
 <li><a href="iphone_8.html">iphone 8</a></li>
 <li><a href="iphone_9.html">iphone 9</a></li>
-<li><a href="iphone_10.html">iphone 10</a></li>
+<li><a href="iphone_X.html">iphone X</a></li>
+<li><a href="iphone_Xs.html">iphone Xs</a></li>
+<li><a href="iphone_11.html">iphone 11</a></li>
 </ol>
 
 <br>
