--- a/samsung_galaxy_note_20.html
+++ b/samsung_galaxy_note_20.html
@@ -37,7 +37,7 @@
                 <a class="dropdown-item" href="samsung_galaxy_note_series.html">
                   Samsung Galaxy Note series
                 </a>
-                <a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
+                <a class="dropdown-item" href="samsung_galaxy_fold_series.html">Samsung Galaxy Fold series</a>
               </div>
             </li>
             <!--dropdown-2-->
