--- a/samsung_galaxy_note_5.html
+++ b/samsung_galaxy_note_5.html
@@ -28,7 +28,7 @@
             <!--Dropdown-Samsung-->
             <div class="container">  
                         <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="samsung_galaxy_fold_series.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Samsung
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,7 +46,7 @@
                   iphone
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="">About Apple </a>
+                  <a class="dropdown-item" href="Apple.html">About Apple </a>
                   <a class="dropdown-item" href="iphone.html">iphone</a>
                   <a class="dropdown-item" href="#">ipad</a>
                 </div>
