--- a/samsung_galaxy_s_3.html
+++ b/samsung_galaxy_s_3.html
@@ -38,7 +38,7 @@
           <a class="dropdown-item" href="samsung_galaxy_note_series.html">
             Samsung Galaxy Note series
           </a>
-          <a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
+          <a class="dropdown-item" href="samsung_galaxy_fold_series.html">Samsung Galaxy Fold series</a>
         </div>
       </li>
       <!--dropdown-2-->
@@ -47,7 +47,7 @@
             iphone
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="">About Apple </a>
+            <a class="dropdown-item" href="Apple.html">About Apple </a>
             <a class="dropdown-item" href="iphone.html">iphone</a>
             <a class="dropdown-item" href="#">ipad</a>
           </div>
