--- a/samsung_galaxy_s_series.html
+++ b/samsung_galaxy_s_series.html
@@ -42,16 +42,16 @@
 			<a class="dropdown-item" href="samsung_galaxy_note_series.html">
 			  Samsung Galaxy Note series
 			</a>
-			<a class="dropdown-item" href="">Samsung Galaxy Fold series</a>
+			<a class="dropdown-item" href="samsung_galaxy_fold_series.html">Samsung Galaxy Fold series</a>
 		  </div>
 		</li>
 		<!--dropdown-2-->
 		<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  iphone
 			</a>
 			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			  <a class="dropdown-item" href="">About Apple </a>
+			  <a class="dropdown-item" href="Apple.html">About Apple </a>
 			  <a class="dropdown-item" href="iphone.html">iphone</a>
 			  <a class="dropdown-item" href="#">ipad</a>
 			</div>
@@ -170,6 +170,16 @@ Samsung Galaxy S series Phones:
 </ol>
 
 <br>
+
+<!-- Optional JavaScript -->
+<script>
+
+  </script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 
 <a href="Samsung.html"><button>Go Back To Samsung  Page</button></a>
 
