--- a/samsung_galaxy_s_20.html
+++ b/samsung_galaxy_s_20.html
@@ -162,15 +162,15 @@
     <th>Camera</th>
     </tr>
     <tr>
+    <td>GSM / CDMA / HSPA / EVDO / LTE</td>
+    <td>February 11,2020.Available. Released 2020, March 6</td>
+    <td>151.7 x 69.1 x 7.9 mm (5.97 x 2.72 x 0.31 in).163 g (5.75 oz)</td>
+    <td ></td>
+    <td></td>
     <td></td>
     <td></td>
     <td></td>
     <td id="demo"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
     
     </tr>
     </table>
