--- a/samsung_galaxy_s_20.html
+++ b/samsung_galaxy_s_20.html
@@ -9,7 +9,7 @@
    <!--index.css-->
    <link href="index.css" rel="stylesheet type=text/css"/>
 
-   <title>Samsung Galaxy Note 20</title>
+   <title>Samsung Galaxy S20</title>
 
    <!--smart tech icon -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -148,7 +148,7 @@
     </style>
     </head>
     <body>
-    <table>
+    <table class="table">
     <table style="width:99.99%">
     <tr>
     <th>Network</th>
@@ -164,13 +164,19 @@
     <tr>
     <td>GSM / CDMA / HSPA / EVDO / LTE</td>
     <td>February 11,2020.Available. Released 2020, March 6</td>
-    <td>151.7 x 69.1 x 7.9 mm (5.97 x 2.72 x 0.31 in).163 g (5.75 oz)</td>
-    <td ></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td id="demo"></td>
+    <td>151.7 x 69.1 x 7.9 mm (5.97 x 2.72 x 0.31 in).163 g (5.75 oz). Front/back glass (Gorilla Glass 6), aluminum frame. IP68 dust/water proof (up to 1.5m for 30 mins).</td>
+    <td>Dynamic AMOLED 2X capacitive touchscreen, 16M colors. 6.2 inches, 93.8 cm2 (~89.5% screen-to-body ratio).</td>
+    <td>Android 10.0; One UI 2.</td>
+    <td>Exynos 990 (7+ nm) - EMEA
+      Qualcomm  SM8250 Snapdragon 865 (7+ nm)  (USA, China).</td>
+    <td>microSDXC (uses shared SIM slot)
+      128GB 8GB RAM. UFS 3.0 .</td>
+    <td>Non-removable Li-Po 4000 mAh battery.Fast charging 25W.USB Power Delivery 3.0 .Fast Qi/PMA wireless charging 15W. Power bank/Reverse wireless charging 9W.</td>
+    <td id="demo">(back)12 MP, f/1.8, 26mm (wide), 1/1.76", 1.8µm, Dual Pixel PDAF, OIS
+      64 MP, f/2.0, (telephoto), 1/1.72", 0.8µm, PDAF, OIS, 3x hybrid optical zoom
+      12 MP, f/2.2, 13mm (ultrawide), 1.4µm, Super Steady video.
+      <hr>
+      (front)10 MP, f/2.2, 26mm (wide), 1/3.2", 1.22µm, Dual Pixel PDAF.</td>
     
     </tr>
     </table>
