--- a/samsung_galaxy_s_10.html
+++ b/samsung_galaxy_s_10.html
@@ -169,9 +169,7 @@ table, th, td {
 <td>Exynos 9820 Octa (8 nm) - EMEA
 Qualcomm SDM855 Snapdragon 855 (7 nm)  (USA, China).
 </td>
-<td>128/512 GB, 8 GB RAM. microSD, up to 512 GB (uses SIM 2 slot) - dual SIM model only
-.
-</td>
+<td>128/512 GB, 8 GB RAM. microSD, up to 512 GB (uses SIM 2 slot) - dual SIM model only.</td>
 <td>Non-removable Li-Ion 3400 mAh battery. Fast battery charging 15W. Fast wireless charging 15W.Power bank/Reverse wireless charging 9W.</td>
 <td id="demo">(Back)- 12 MP, f/1.5-2.4, 26mm (wide), 1/2.55", 1.4?m, Dual Pixel PDAF, OIS.12 MP, f/2.4, 52mm (telephoto), 1/3.6", 1.0?m, AF, OIS, 2x optical zoom.16 MP, f/2.2, 12mm (ultrawide).
 .(Front)- 10 MP, f/1.9, 26mm (wide), Dual Pixel PDAF.
