--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   iphone
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="Apple.html">About Apple </a>
+                  <a class="dropdown-item" href="apple.html">About Apple </a>
                   <a class="dropdown-item" href="iphone.html">iphone</a>
                   <a class="dropdown-item" href="#">ipad</a>
                 </div>
