My 10th commit.

--- a/iphone_1.html
+++ b/iphone_1.html
@@ -123,7 +123,6 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -131,6 +130,7 @@
     </form>
   </div>
 </div>
+
 
 </nav>
 
@@ -173,13 +173,13 @@ table, th, td {
 
 </tr>
 </table>
-
 <br>
-
-<a href="iphone.html"><button>Go Back To iphone page </button></a>
-
-<a href="index.html"><button>Go Back To Main Page</button></a>
-
+<ul class="pagination">
+  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  <li class="page-item" onclick="myFunction()"><a class="page-link" href="#">Special Feature</a></li>
+</ul>
+<br>
 
 <!-- Optional JavaScript -->
 <script>
@@ -196,7 +196,7 @@ table, th, td {
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
-<button type="button" onclick="myFunction()">Special Feature</button><!--footer-->
+
 
 <footer class="ct-footer">
   <div class="container">
