--- a/iphone_2.html
+++ b/iphone_2.html
@@ -147,6 +147,10 @@ table, th, td {
 </style>
 </head>
 <body>
+  <ul class="breadcrumb">
+    <li class="breadcrumb-item"><a href="iphone.html">iphone</a></li>
+    <li class="breadcrumb-item active">Iphone 2</li>
+  </ul>
 <table>
 <table style="width:99.99%">
 <tr>
@@ -175,10 +179,11 @@ table, th, td {
 </table>
 
 <br>
-<a href=""><button>Go Back To iphone page</button></a>
-
-<a href="index.html"><button>Go Back To Main Page</button></a>
-
+<ul class="pagination">
+  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  <class="page-item" onclick="myFunction()"><a class="page-link">Special Feature</a></li>
+</ul>
 
 
 <!-- Optional JavaScript -->
@@ -194,9 +199,6 @@ table, th, td {
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-
-<button type="button" onclick="myFunction()">Special Feature</button>
 
 <!--footer-->
 
