--- a/iphone_2.html
+++ b/iphone_2.html
@@ -123,7 +123,17 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          
+        </li>
+        <!--dropdown-9-->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            About Us
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="form_1.html">Any suggestion</a>
+            <a class="dropdown-item" href="#">Contact us</a>
+          </div>
+      </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -135,9 +145,8 @@
   </nav>
 
 
-<img src="pic/iphone_3g.png" class="img-fluid">
+<img src="pic/iphone_3g.png" class="img-fluid img-thumbnail mx-auto d-block" alt="Cinque Terre" width="304" height="236">
 <br>
-<h1>iphone 2</h1>
 
 <style>
 table, th, td {
@@ -147,13 +156,16 @@ table, th, td {
 </style>
 </head>
 <body>
+  <div class="container-fluid">
+    <h2>iphone 2</h2>
   <ul class="breadcrumb">
     <li class="breadcrumb-item"><a href="iphone.html">iphone</a></li>
     <li class="breadcrumb-item active">Iphone 2</li>
   </ul>
-<table>
-<table style="width:99.99%">
-<tr>
+  <div>
+<table class="table-responsive-md table-responsive-lg table-responsive-sm table-hover table-bordered">
+  <thead>
+  <tr> 
 <th>Network</th>
 <th>Lanuch</th>
 <th>Body</th>
@@ -164,7 +176,9 @@ table, th, td {
 <th>Battery</th>
 <th>Camera</th>
 </tr>
+</thead>
 <tr>
+  <tbody>  
 <td>GSM / HSPA</td>
 <td>Released 2008, July(Discontinued)</td>
 <td>115.5 x 62.1 x 12.3 mm (4.55 x 2.44 x 0.48 in).133 g (4.69 oz).Corning Gorilla Glass, oleophobic coating</td>
@@ -176,6 +190,7 @@ table, th, td {
 <td>(Back)Single 2 MP</td>
 
 </tr>
+</tbody>
 </table>
 
 <br>
@@ -184,7 +199,8 @@ table, th, td {
   <li class="page-item"><a class="page-link" href="#">Next</a></li>
   <class="page-item" onclick="myFunction()"><a class="page-link">Special Feature</a></li>
 </ul>
-
+</div>
+</div>
 
 <!-- Optional JavaScript -->
 <script>
