--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
               <!--dropdown-9-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Contact Us
+            About Us
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="form_1.html">Any suggestion</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="contact_us.html">Contact Us</a>
           </div>
       </li>
           </ul>
